# RuView

./: CHANGELOG.md  CLAUDE.md  README.md
.github/workflows/: ci.yml
docs/adr/: ADR-095-rvcsi-edge-rf-sensing-platform.md  ADR-096-rvcsi-ffi-crate-layout.md  README.md
nvsim/: sw.js.map
v2/: Cargo.toml
v2/crates/rvcsi-adapter-file/src/: lib.rs
v2/crates/rvcsi-adapter-nexmon/native/: rvcsi_nexmon_shim.c  rvcsi_nexmon_shim.h
v2/crates/rvcsi-adapter-nexmon/src/: ffi.rs  lib.rs
v2/crates/rvcsi-cli/: Cargo.toml
v2/crates/rvcsi-cli/src/: commands.rs  main.rs
v2/crates/rvcsi-dsp/src/: lib.rs
v2/crates/rvcsi-events/: Cargo.toml
v2/crates/rvcsi-events/src/: lib.rs
v2/crates/rvcsi-node/: Cargo.toml  index.d.ts  index.js
v2/crates/rvcsi-node/__test__/: api.test.cjs
v2/crates/rvcsi-node/src/: lib.rs
v2/crates/rvcsi-runtime/src/: capture.rs  lib.rs  summary.rs
v2/crates/rvcsi-ruvector/src/: lib.rs
v2/crates/wifi-densepose-sensing-server/tests/: introspection_latency.rs
